[project]
name = "bicscan-mcp"
version = "0.1.0"
description = "BICScan MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.5.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
bicscan-mcp = "bicscan_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
