[project]
name = "blocknative-mcp"
version = "0.1.0"
description = "An MCP server that provides real-time gas price predictions across multiple blockchains."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
]

[project.scripts]
blocknative-mcp = "blocknative_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
