[package]
name = "multisig"
description = "cargo-near-new-project-description"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/<xxx>/<xxx>"

[lib]
crate-type = ["cdylib", "rlib"]
[dependencies]
near-sdk = "5.9"

[dev-dependencies]
near-sdk = { version = "5.9", features = ["unit-testing"] }
near-workspaces = { version = "0.18", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
