[package]
name = "bonding-curve"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bonding_curve"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build","anchor-spl/idl-build"]
devnet = ["raydium-cpmm-cpi/devnet","raydium-locking-cpi/devnet"]


[dependencies]
proc-macro2 = "=1.0.94"
bytemuck_derive = "=1.8.1"
anchor-lang = {version = "0.31.0", features = ["init-if-needed","event-cpi"]}
anchor-spl ={ version = "0.31.0", features = ["metadata"] }
raydium-cpmm-cpi = { git = "https://github.com/raydium-io/raydium-cpi", package = "raydium-cpmm-cpi" }
raydium-locking-cpi = { git = "https://github.com/raydium-io/raydium-cpi", package = "raydium-locking-cpi" }
